fix: Compilation issue [DHIS2-19028]